--- a/styles.css
+++ b/styles.css
@@ -5,22 +5,36 @@
     padding-top: 150px;
 }
 
-#screen {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-left: 290px;
+body {
+    background-color: lightgray;
 }
 
-p {
-    padding: 0;
+.calcBorder {
+    padding: 30px;
+    border-radius: 15px;
+    border: 3px solid black;
+    background-color: gray
+}
+
+#screen {
+    background-color: lightgray;
+    display: inline-flex;
+    flex-direction: column;
     margin: 0;
+    text-align: right;
+    border: 3px solid black;
+    border-radius: 10px; 
+    width: 330px;
+    height: 75px; 
+    font-size: 40px;
 }
 
 button {
     width: 80px;
     height: 70px;
     margin-top: 5px;
+    font-weight: 700;
+    border: 1px solid black;
 }
 
 #clear, #delete {
@@ -32,4 +46,13 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#warningText {
+    font-size: 40px;
+}
+
+#screenTextTop {
+    font-size: 20px;
+    height: 20px;
 }
